force-app/main/default/objects/Opportunity/fields/At_Risk_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>At Risk Opportunity</label>
    <type>Checkbox</type>
</CustomField>