force-app/main/default/objects/Opportunity/fields/Battery_Packs__c.field-meta.xml
<CustomField>
    <fullName>Battery_Packs__c</fullName>
    <label>Battery Packs</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>