force-app/main/default/objects/Opportunity/fields/Charge_Ports__c.field-meta.xml
<CustomField>
    <fullName>Charge_Ports__c</fullName>
    <label>Charge Ports</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>