force-app/main/default/objects/Opportunity/fields/Charger_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Charger_Opportunity_Type__c</fullName>
    <label>Charger Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sold with Bus</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Charger Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>