force-app/main/default/objects/Opportunity/fields/ConcurConnect__AccruedUnApprovedExpenses__c.field-meta.xml
<CustomField>
    <fullName>ConcurConnect__AccruedUnApprovedExpenses__c</fullName>
    <formula>IF(AND(ConcurConnect__AccruedUnApprovedExpenseTotal__c &gt; 0, Amount &gt; 0), (ConcurConnect__AccruedUnApprovedExpenseTotal__c / Amount), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accruing/Unpaid Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>