force-app/main/default/objects/Opportunity/fields/ConcurConnect__AccruedUnApprovedExpenseTotal__c.field-meta.xml
<CustomField>
    <fullName>ConcurConnect__AccruedUnApprovedExpenseTotal__c</fullName>
    <label>Accruing/Unpaid Expense Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>