force-app/main/default/objects/Opportunity/fields/ConcurConnect__FinalExpense__c.field-meta.xml
<CustomField>
    <fullName>ConcurConnect__FinalExpense__c</fullName>
    <formula>IF(AND(ConcurConnect__FinalExpenseTotal__c &gt; 0, Amount &gt; 0), (ConcurConnect__FinalExpenseTotal__c / Amount), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final/Paid Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>