force-app/main/default/objects/Opportunity/fields/ConcurConnect__FinalExpenseTotal__c.field-meta.xml
<CustomField>
    <fullName>ConcurConnect__FinalExpenseTotal__c</fullName>
    <label>Final/Paid Expense Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>