force-app/main/default/objects/Opportunity/fields/Config_Notes__c.field-meta.xml
<CustomField>
    <fullName>Config_Notes__c</fullName>
    <label>Config Notes</label>
    <type>TextArea</type>
</CustomField>