force-app/main/default/objects/Opportunity/fields/CPI_Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>CPI_Credit_Memo__c</fullName>
    <label>CPI Credit Memo#</label>
    <length>30</length>
    <type>Text</type>
</CustomField>