force-app/main/default/objects/Opportunity/fields/Credit_Memo_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Request_Date__c</fullName>
    <label>Credit Memo Request Date</label>
    <type>Date</type>
</CustomField>