force-app/main/default/objects/Opportunity/fields/Customer_Installation_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Installation_Expectation__c</fullName>
    <label>Customer Installation Expectation</label>
    <type>Date</type>
</CustomField>