force-app/main/default/objects/Opportunity/fields/Estimated_Margin__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Margin__c</fullName>
    <formula>Estimated_Margin_or_Fee__c / (GILLIG_Quote_to_Customer__c - Sales_Tax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Margin (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>