force-app/main/default/objects/Opportunity/fields/Estimated_Margin_or_Fee__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Margin_or_Fee__c</fullName>
    <label>Estimated Margin or Fee ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>