force-app/main/default/objects/Opportunity/fields/GILLIG_Parts_PO__c.field-meta.xml
<CustomField>
    <fullName>GILLIG_Parts_PO__c</fullName>
    <label>GILLIG Parts PO#</label>
    <length>18</length>
    <type>Text</type>
</CustomField>