force-app/main/default/objects/Opportunity/fields/GILLIG_Parts_PO_Date__c.field-meta.xml
<CustomField>
    <fullName>GILLIG_Parts_PO_Date__c</fullName>
    <label>GILLIG Parts PO Date</label>
    <type>Date</type>
</CustomField>