force-app/main/default/objects/Opportunity/fields/GILLIG_Quote_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>GILLIG_Quote_to_Customer__c</fullName>
    <label>GILLIG Quote to Customer ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>