force-app/main/default/objects/Opportunity/fields/Hardware_Costs__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Costs__c</fullName>
    <label>Hardware Costs ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>