force-app/main/default/objects/Opportunity/fields/High_Probability_Order__c.field-meta.xml
<CustomField>
    <fullName>High_Probability_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Probability Order</label>
    <type>Checkbox</type>
</CustomField>