force-app/main/default/objects/Opportunity/fields/OEM__c.field-meta.xml
<CustomField>
    <fullName>OEM__c</fullName>
    <formula>if( and(IsClosed =true, not(ispickval(StageName, &quot;Customer Delayed (Closed)&quot;) )),

if(  ISBLANK(Competitor__c ),


&quot;GILLIG&quot;,  Competitor__r.Name  ),&quot;&quot;)</formula>
    <label>OEM</label>
    <type>Text</type>
</CustomField>