force-app/main/default/objects/Opportunity/fields/Options_Used__c.field-meta.xml
<CustomField>
    <fullName>Options_Used__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Options Used</label>
    <referenceTo>Contract_Option__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>