force-app/main/default/objects/Opportunity/fields/Order_Probability__c.field-meta.xml
<CustomField>
    <fullName>Order_Probability__c</fullName>
    <label>Order Probability</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. High Probability</fullName>
            </value>
            <value>
                <fullName>2. Medium Probability</fullName>
            </value>
            <value>
                <fullName>3. Low Probability</fullName>
            </value>
            <value>
                <fullName>4. Unlikely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>