force-app/main/default/objects/Opportunity/fields/Pantograph__c.field-meta.xml
<CustomField>
    <fullName>Pantograph__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pantograph</label>
    <type>Checkbox</type>
</CustomField>