force-app/main/default/objects/Opportunity/fields/Pricing_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>