force-app/main/default/objects/Opportunity/fields/Pricing_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Request_Date__c</fullName>
    <label>Pricing Request Date</label>
    <type>Date</type>
</CustomField>