force-app/main/default/objects/Opportunity/fields/Quantity_of_Dispensers__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_Dispensers__c</fullName>
    <label>Quantity of Dispensers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>