force-app/main/default/objects/Opportunity/fields/Reference_Contract__c.field-meta.xml
<CustomField>
    <fullName>Reference_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Contract</label>
    <referenceTo>Customer_Contract__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities_del</relationshipName>
    <type>Lookup</type>
</CustomField>