force-app/main/default/objects/Opportunity/fields/Supplier_Installation_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Installation_Expectation__c</fullName>
    <label>Supplier Installation Expectation</label>
    <type>Date</type>
</CustomField>