force-app/main/default/objects/Opportunity/fields/Supplier_Quote_Direct_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Quote_Direct_to_Customer__c</fullName>
    <label>Supplier Quote Direct to Customer ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>