force-app/main/default/objects/Opportunity/fields/Supplier_Quote_to_GILLIG__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Quote_to_GILLIG__c</fullName>
    <label>Supplier Quote to GILLIG ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>