force-app/main/default/objects/Opportunity/fields/Supplier_Ship_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Ship_Expectation__c</fullName>
    <label>Supplier Ship Expectation</label>
    <type>Date</type>
</CustomField>