force-app/main/default/objects/Opportunity/fields/System_Quoted__c.field-meta.xml
<CustomField>
    <fullName>System_Quoted__c</fullName>
    <label>System Quoted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPE250</fullName>
            </value>
            <value>
                <fullName>Custom/Mixed</fullName>
            </value>
            <value>
                <fullName>Express Plus 150-160kW</fullName>
            </value>
            <value>
                <fullName>Express Plus 200kW</fullName>
            </value>
            <value>
                <fullName>Flex 180kW</fullName>
            </value>
            <value>
                <fullName>HVC-100</fullName>
            </value>
            <value>
                <fullName>HVC-150</fullName>
            </value>
            <value>
                <fullName>HVC-150PD</fullName>
            </value>
            <value>
                <fullName>HVC-300PD</fullName>
            </value>
            <value>
                <fullName>HVC-450PD</fullName>
            </value>
            <value>
                <fullName>MD 150kW</fullName>
            </value>
            <value>
                <fullName>MD 300kW</fullName>
            </value>
            <value>
                <fullName>MD 75kW</fullName>
            </value>
            <value>
                <fullName>Mobile 25kW</fullName>
            </value>
            <value>
                <fullName>Mobile 50kW</fullName>
            </value>
            <value>
                <fullName>SiCharge UC200</fullName>
            </value>
            <value>
                <fullName>SiCharge UC600</fullName>
            </value>
            <value>
                <fullName>Terra 54HV</fullName>
            </value>
            <value>
                <fullName>Ultra Fast 450kW</fullName>
            </value>
            <value>
                <fullName>WAVE 250kW</fullName>
            </value>
            <value>
                <fullName>MaxxHP 150kW</fullName>
                <isActive>false</isActive>
                <label>MaxxHP 150kW</label>
            </value>
            <value>
                <fullName>Power Block</fullName>
                <isActive>false</isActive>
                <label>Power Block</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>