force-app/main/default/objects/Opportunity/fields/Total_Lines__c.field-meta.xml
<CustomField>
    <fullName>Total_Lines__c</fullName>
    <label>Total Lines</label>
    <summaryForeignKey>Opportunity_Line__c.Opportunity_Line__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>