force-app/main/default/objects/Opportunity/fields/Total_Qty__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty__c</fullName>
    <label>Total Qty</label>
    <summarizedField>Opportunity_Line__c.Quantity__c</summarizedField>
    <summaryForeignKey>Opportunity_Line__c.Opportunity_Line__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>