force-app/main/default/objects/Opportunity/recordTypes/Charger.recordType-meta.xml
<RecordType>
    <fullName>Charger</fullName>
    <active>true</active>
    <businessProcess>Charger</businessProcess>
    <description>Electric Bus Charger Opportunities</description>
    <label>Charger</label>
</RecordType>