force-app/main/default/objects/Opportunity/recordTypes/Competitor.recordType-meta.xml
<RecordType>
    <fullName>Competitor</fullName>
    <active>true</active>
    <businessProcess>Competitor</businessProcess>
    <description>Competitor business we will not bid on</description>
    <label>Competitor</label>
</RecordType>