force-app/main/default/objects/Opportunity/recordTypes/Direct.recordType-meta.xml
<RecordType>
    <fullName>Direct</fullName>
    <active>true</active>
    <businessProcess>Direct</businessProcess>
    <description>Direct purchases which do not require contract options or formal bid documents</description>
    <label>Direct</label>
</RecordType>