force-app/main/default/objects/Opportunity/recordTypes/IFB.recordType-meta.xml
<RecordType>
    <fullName>IFB</fullName>
    <active>true</active>
    <businessProcess>Bid</businessProcess>
    <description>First order off a new bid (IFB)</description>
    <label>IFB</label>
</RecordType>