force-app/main/default/objects/Opportunity/recordTypes/Option.recordType-meta.xml
<RecordType>
    <fullName>Option</fullName>
    <active>true</active>
    <businessProcess>Option</businessProcess>
    <description>Option orders on existing contracts for named properties</description>
    <label>Option</label>
</RecordType>