force-app/main/default/objects/Opportunity/recordTypes/Piggyback.recordType-meta.xml
<RecordType>
    <fullName>Piggyback</fullName>
    <active>true</active>
    <businessProcess>Piggyback</businessProcess>
    <description>Purchases made using another customer&apos;s contract options</description>
    <label>Piggyback</label>
</RecordType>