force-app/main/default/objects/Opportunity/recordTypes/RFP.recordType-meta.xml
<RecordType>
    <fullName>RFP</fullName>
    <active>true</active>
    <businessProcess>Bid</businessProcess>
    <description>The initial purchase off a new bid (RFP)</description>
    <label>RFP</label>
</RecordType>