force-app/main/default/objects/Opportunity/recordTypes/TBD.recordType-meta.xml
<RecordType>
    <fullName>TBD</fullName>
    <active>true</active>
    <businessProcess>Competitor</businessProcess>
    <description>To be determined</description>
    <label>TBD</label>
</RecordType>