force-app/main/default/objects/Opportunity/validationRules/Loss_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Loss_Reason</fullName>
    <active>true</active>
    <description>Requires a loss reason to be entered if closing an opportunity as lost to competitor.</description>
    <errorConditionFormula>text(StageName) = &quot;Closed Lost&quot; &amp;&amp; isblank(text( Loss_Reason__c ))</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Please select a value for loss reason</errorMessage>
</ValidationRule>