force-app/main/default/objects/Opportunity/validationRules/Lost_Competitor_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_Competitor_check</fullName>
    <active>true</active>
    <errorConditionFormula>text(StageName) = &quot;Closed Lost&quot; &amp;&amp; isblank(Competitor__c)</errorConditionFormula>
    <errorDisplayField>Competitor__c</errorDisplayField>
    <errorMessage>Please enter a Competitor</errorMessage>
</ValidationRule>