force-app/main/default/objects/Opportunity/validationRules/Quote_Due_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Due_Date</fullName>
    <active>true</active>
    <description>Set quote due date when pricing is requested</description>
    <errorConditionFormula>text(StageName) = &quot;Prepare Pricing&quot; &amp;&amp; ISNULL(Quote_Due_Date__c)</errorConditionFormula>
    <errorMessage>Please update Quote Due date before pricing is requested</errorMessage>
</ValidationRule>