force-app/main/default/objects/Opportunity/validationRules/Type_is_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_is_Blank</fullName>
    <active>true</active>
    <description>Checks whether Type has been populated</description>
    <errorConditionFormula>isblank( text(Type ))</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>Please Select a Type.  New Business = Customer&apos;s Last Order was not GILLIG. Existing Business = Customer&apos;s Last Order was GILLIG.</errorMessage>
</ValidationRule>